# Symply

./: README.md  makefile  pyproject.toml
symply/: __init__.py  symply.py  watcher.py
tests/: test_symlink.py  test_watcher.py
